--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <section class="section features-section">
         <div class="container">
-          <h2 class="invisible-features">Features</h2>
+          <h2 class="visually-hidden">Features</h2>
           <ul class="features-container-list">
             <li class="features-list">
               <h3 class="features-title">Strategy</h3>
@@ -213,7 +213,7 @@
 
     <footer class="footer">
       <div class="container footer-container">
-        <a class="logo" href="./index.html"
+        <a class="logo footer-logo" href="./index.html"
           >Web<span class="accent-footer">Studio</span></a
         >
         <p class="footer-text">
