--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Mark Guerrero</h3>
-              <p class="team-prof">Product Designer</p>
+              <div class="container-team-np">
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="team-prof">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -115,8 +117,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Tom Ford</h3>
-              <p class="team-prof">Frontend Developer</p>
+              <div class="container-team-np">
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="team-prof">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -125,8 +129,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Camila Garcia</h3>
-              <p class="team-prof">Marketing</p>
+              <div class="container-team-np">
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="team-prof">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -135,8 +141,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Daniel Wilson</h3>
-              <p class="team-prof">UI Designer</p>
+              <div class="container-team-np">
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="team-prof">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -153,8 +161,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="prtfolio-name">Banking App</h3>
-              <p class="portfolio-dsc">App</p>
+              <div class="container-portfolio-np">
+                <h3 class="prtfolio-name">Banking App</h3>
+                <p class="portfolio-dsc">App</p>
+              </div>
             </li>
             <li class="porfolio-item">
               <img
@@ -163,8 +173,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="prtfolio-name">Cashless Payment</h3>
-              <p class="portfolio-dsc">Marketing</p>
+              <div class="container-portfolio-np">
+                <h3 class="prtfolio-name">Cashless Payment</h3>
+                <p class="portfolio-dsc">Marketing</p>
+              </div>
             </li>
             <li class="porfolio-item">
               <img
@@ -173,8 +185,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="prtfolio-name">Meditation App</h3>
-              <p class="portfolio-dsc">App</p>
+              <div class="container-portfolio-np">
+                <h3 class="prtfolio-name">Meditation App</h3>
+                <p class="portfolio-dsc">App</p>
+              </div>
             </li>
             <li class="porfolio-item">
               <img
@@ -183,8 +197,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="prtfolio-name">Taxi Service</h3>
-              <p class="portfolio-dsc">Marketing</p>
+              <div class="container-portfolio-np">
+                <h3 class="prtfolio-name">Taxi Service</h3>
+                <p class="portfolio-dsc">Marketing</p>
+              </div>
             </li>
             <li class="porfolio-item">
               <img
@@ -193,8 +209,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="prtfolio-name">Screen Illustrations</h3>
-              <p class="portfolio-dsc">Design</p>
+              <div class="container-portfolio-np">
+                <h3 class="prtfolio-name">Screen Illustrations</h3>
+                <p class="portfolio-dsc">Design</p>
+              </div>
             </li>
             <li class="porfolio-item">
               <img
@@ -203,8 +221,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="prtfolio-name">Online Courses</h3>
-              <p class="portfolio-dsc">Marketing</p>
+              <div class="container-portfolio-np">
+                <h3 class="prtfolio-name">Online Courses</h3>
+                <p class="portfolio-dsc">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
